fixed some things in html file and also in css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <header>
-        <a href="#">Gmail</a>
         <a href="images.html">Images</a>
+        <a href="advanced.html">Advanced Search</a>
     </header>
 
 
