small changes in index.html, added classes in images.html and styling for them in css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <header>
-        <a href="images.html">Images</a>
-        <a href="advanced.html">Advanced Search</a>
+        <a href="images.html" class="imagesLink">Images</a>
+        <a href="advanced.html" class="advancedLink">Advanced Search</a>
     </header>
 
 
