--- a/images.html
+++ b/images.html
@@ -10,8 +10,8 @@
 <body>
 
     <header>
-        <a href="index.html">Home</a>
-        <a href="advanced.html">Advanced Search</a>
+        <a href="index.html" class="homeLink">Home</a>
+        <a href="advanced.html" class="advancedLink">Advanced Search</a>
     </header>
 
 
