finished images.html file

--- a/images.html
+++ b/images.html
@@ -16,11 +16,11 @@
 
 
     <div class="center-part">
-        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google logo">
+        <img src="googleImages.png" class="googleImages" alt="Google logo">
     
 
     <div class="search-part">
-        <form action="https://google.com/search">
+        <form action="https://www.google.ba/imghp?hl=en&ogbl">
             <input type="text" name="q" class="search-bar">
             <div class="search-buttons">
             <input type="submit" value="Google Search" class="btn1">
