unfinished project, saved it on github to continue on laptop

--- a/advanced.html
+++ b/advanced.html
@@ -15,11 +15,25 @@
 
     <div class="bottomLine"></div>
 
+    <h2 class="title">Find pages with...</h2>
     <div class="centerPart">
-        <h2 class="title">Find pages with...</h2>
 
+
+        <div class="leftSide">
+            <p>all these words:</p>
+            <p>this exact word or phrase:</p>
+            <p>any of these words:</p>
+            <p>none of these words:</p>
+        </div>
 
         <form action="https://www.google.com/advanced_search?hl=en-BA&fg=1">
+
+           <div class="rightSide">
+            <input type="text"> 
+            <input type="text">
+            <input type="text">
+            <input type="text">
+        </div>
         </form>
     </div>
 
