fully created inputs and labels

--- a/advanced.html
+++ b/advanced.html
@@ -15,24 +15,30 @@
 
     <div class="bottomLine"></div>
 
-    <h2 class="title">Find pages with...</h2>
+
     <div class="centerPart">
-
-
-        <div class="leftSide">
-            <p>all these words:</p>
-            <p>this exact word or phrase:</p>
-            <p>any of these words:</p>
-            <p>none of these words:</p>
-        </div>
+        <h2 class="title">Find pages with...</h2>
 
         <form action="https://www.google.com/advanced_search?hl=en-BA&fg=1">
 
-           <div class="rightSide">
-            <input type="text"> 
+            <label>all these words</label>
             <input type="text">
+            <p>Type the important words: tri-colour rat terrier</p> 
+            <br>
+
+            <label>this exact word or phrase:</label>
             <input type="text">
+            <p>Put exact words in quotes: "rat terrier"</p>
+            <br>
+
+            <label>any of these words:</label>
             <input type="text">
+            <p>Type OR between all the words you want: miniature OR standard</p>
+            <br>
+
+            <label>none of these words:</label>
+            <input type="text">
+            <p>Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</p>
         </div>
         </form>
     </div>
