finished advanced.html and css styling for it

--- a/advanced.html
+++ b/advanced.html
@@ -9,20 +9,30 @@
 </head>
 <body>
 
+    <header>
+        <a href="images.html" class="imagesLink">Images</a>
+        <a href="index.html" class="homeLink">Home</a>
+    </header>
+
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
     
     <h1 class="advancedHeader">Advanced Search</h1> 
+
 
     <div class="bottomLine"></div>
 
 
     <div class="centerPart">
+        <h2 class="titleRight">To do this in the search box</h2>
         <h2 class="title">Find pages with...</h2>
+
+
 
         <form action="https://www.google.com/advanced_search?hl=en-BA&fg=1">
 
-            <label>all these words</label>
+            <label>all these words:</label>
             <input type="text">
+        
             <p>Type the important words: tri-colour rat terrier</p> 
             <br>
 
