small changes in css and html

--- a/images.html
+++ b/images.html
@@ -24,7 +24,7 @@
             <input type="text" name="q" class="search-bar">
             <div class="search-buttons">
             <input type="submit" value="Google Search" class="btn1">
-            <input type="submit" value="I´m Feeling luckly" class="btn2">
+            <input type="submit" value="I´m Feeling Luckly" class="btn2">
             </div>
 
             <div class="languages">
