--- a/index.html
+++ b/index.html
@@ -39,23 +39,28 @@
         </form>
     </div>
     </div>
-<!--
-    <footer>
-        <h2><a href="#">Bosnia & Herzegovina</a></h2>
-        <ul class="first-list">
+
+
+<footer class="footerBosnia">
+    <a class="bosniaTitle">Bosnia & Herzegovina</a> 
+</footer>
+
+<footer class="lastFooter">
+    <div class="leftside">
+        <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Advertising</a></li>
             <li><a href="#">Business</a></li>
-            <li><a href="#">How Search Works</a></li>
+            <li><a href="#">How Search works</a></li>
         </ul>
 
-        <ul class="second-list">
+        <ul class="rightside">
             <li><a href="#">Privacy</a></li>
             <li><a href="#">Terms</a></li>
             <li><a href="#">Settings</a></li>
         </ul>
-    </footer>
--->
+    </div>
+</footer>
     
 </body>
 </html>
