--- a/advanced.html
+++ b/advanced.html
@@ -49,9 +49,30 @@
             <label>none of these words:</label>
             <input type="text">
             <p>Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</p>
-        </div>
         </form>
     </div>
+
+    <footer class="footerBosnia">
+        <a class="bosniaTitle">Bosnia & Herzegovina</a> 
+
+    <div class="lastFooter">
+        <div class="leftside">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">How Search works</a></li>
+            </ul>
+    
+            <ul class="rightside">
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Settings</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+    
 
 </body>
 </html>
