fixed image search in images.html

--- a/images.html
+++ b/images.html
@@ -20,8 +20,10 @@
     
 
     <div class="search-part">
-        <form action="https://www.google.ba/imghp?hl=en&ogbl">
+        <form action="https://www.google.com/search">
             <input type="text" name="q" class="search-bar">
+            <input type="hidden" name="source" value="hp">
+            <input type="hidden" name="tbm" value="isch">
             <div class="search-buttons">
             <input type="submit" value="Google Search" class="btn1">
             <input type="submit" value="I´m Feeling Luckly" class="btn2">
