created css style for button in advancedStyle.css

--- a/advanced.html
+++ b/advanced.html
@@ -50,7 +50,7 @@
             <input type="text" name="as_eq">
             <p>Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</p>
 
-            <input type="submit" value="Advanced Search">
+            <input type="submit" class="advancedBtn" value="Advanced Search">
         </form>
     </div>
 
