--- a/images.html
+++ b/images.html
@@ -25,8 +25,8 @@
             <input type="hidden" name="source" value="hp">
             <input type="hidden" name="tbm" value="isch">
             <div class="search-buttons">
-            <input type="submit" value="Google Search" class="btn1">
-            <input type="submit" value="I´m Feeling Luckly" class="btn2">
+            <input type="submit" value="Google Search" name="btnK" class="btn1">
+            <input type="submit" value="I´m Feeling Luckly" name="btnI" class="btn2">
             </div>
 
             <div class="languages">
