--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <form action="https://google.com/search">
             <input type="text" name="q" class="search-bar">
             <div class="search-buttons">
-            <input type="submit" value="Google Search" class="btn1">
-            <input type="submit" value="I´m Feeling Luckly" class="btn2">
+            <input type="submit" value="Google Search" name="btnK" class="btn1">
+            <input type="submit" value="I´m Feeling Luckly" name="btnI" class="btn2">
             </div>
 
             <div class="languages">
