added login button in header in all files

--- a/advanced.html
+++ b/advanced.html
@@ -12,6 +12,7 @@
     <header>
         <a href="images.html" class="imagesLink">Images</a>
         <a href="index.html" class="homeLink">Home</a>
+        <a href="#" class="loginBtn">Login</a>
     </header>
 
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
