--- a/images.html
+++ b/images.html
@@ -12,6 +12,7 @@
     <header>
         <a href="index.html" class="homeLink">Home</a>
         <a href="advanced.html" class="advancedLink">Advanced Search</a>
+        <a href="#" class="loginBtn">Login</a>
     </header>
 
 
