--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <a href="images.html" class="imagesLink">Images</a>
         <a href="advanced.html" class="advancedLink">Advanced Search</a>
+        <a href="#" class="loginBtn">Login</a>
     </header>
 
 
